test/driver/diag_col_origin.0.stderr
<source>:6:6: error: cannot add 'i32' to 'bool'
    6 |     5 + true;
      |     ~ ^ ~~~~
